[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "colaml"
authors = [{name = "Shun Yamanouchi", email = "yamanouchi@bs.s.u-tokyo.ac.jp"}]
dynamic = ["version"]
license = {file = "LICENSE"}
dependencies = [
    "numba", 
    "numpy", 
    "scipy", 
    "tqdm", 
    "ete3", 
    "matplotlib", 
    "threadpoolctl", 
    "pandas", 
    "seaborn"
]

[project.scripts]
colaml = "colaml.__main__:main"

[tool.setuptools]
py-modules = ["colaml"]

[tool.setuptools.dynamic]
version = {attr = "colaml._version.__version__"}

