[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "colaml"
authors = [
    {name = "Shun Yamanouchi", email = "yamanouchi@bs.s.u-tokyo.ac.jp"}
]
dynamic = ["version"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numba", 
    "numpy<2.0", 
    "scipy", 
    "tqdm", 
    "ete3", 
    "matplotlib", 
    "threadpoolctl", 
    "pandas", 
    "seaborn"
]

[project.scripts]
colaml = "colaml.__main__:main"

[tool.setuptools_scm]
version_file = "colaml/_version.py"

[tool.setuptools.dynamic]
version = {attr = "colaml._version.__version__"}

